# ROS_giuaki

./: README.md  readme  reqment
tank/: CMakeLists.txt  package.xml  setup.py
tank/config/: controllers.yaml  joint_names_tank.yaml  slam_params.yaml  tank_view.rviz
tank/launch/: display.launch.py  gazebo.launch.py
tank/meshes/: banh_dan_dong_phai.STL  banh_dan_dong_trai.STL  camera.STL  left_wheel.STL  lidar.STL  prismatic.STL  revolt_joint.STL  right_wheel.STL
tank/tank/: keyboard_control.py  tank_teleop.py
tank/urdf/: tank.csv  tank.urdf  tank.urdf.xacro
tank/worlds/: maze.world
